@@ -637,6 +637,10 @@ Collection.prototype.findAndRemove = function(query, sort, options, callback) {
   this.findAndModify(query, sort, null, options, callback);  
 }
 
+var testForFields = {'limit' : 1, 'sort' : 1, 'fields' : 1, 'skip' : 1, 'hint' : 1, 'explain' : 1, 'snapshot' : 1
+  , 'timeout' : 1, 'tailable' : 1, 'batchSize' : 1, 'raw' : 1, 'read' : 1
+  , 'returnKey' : 1, 'maxScan' : 1, 'min' : 1, 'max' : 1, 'showDiskLoc' : 1, 'comment' : 1};
+
 /**
  * Creates a cursor for a query that can be used to iterate over results from MongoDB
  *
@@ -690,27 +694,32 @@ Collection.prototype.find = function find () {
     selector = {};
     options = args[0];
   }
-
-  if(len === 2) {
-    // prefered way to extend the object
-    var test = ['limit', 'sort', 'fields', 'skip', 'hint', 'explain', 'snapshot'
-		, 'timeout', 'tailable', 'batchSize', 'raw', 'read'
-		, 'returnKey', 'maxScan', 'min', 'max', 'showDiskLoc', 'comment']
-      , is_option = false;
-
-    for (var idx = 0, l = test.length; idx < l; ++idx) {
-      if (test[idx] in fields) {
+    
+  if(len === 2 && !Array.isArray(fields)) {
+    var fieldKeys = Object.getOwnPropertyNames(fields);
+    var is_option = false;
+    
+    for(var i = 0; i < fieldKeys.length; i++) {
+      if(testForFields[fieldKeys[i]] != null) {
         is_option = true;
         break;
       }
     }
-
-    if (is_option) {
+    
+    if(is_option) {
       options = fields;
       fields = undefined;
     } else {
       options = {};
     }
+  } else if(len === 2 && Array.isArray(fields) && !Array.isArray(fields[0])) {
+    var newFields = {};
+    // Rewrite the array
+    for(var i = 0; i < fields.length; i++) {
+      newFields[fields[i]] = 1;
+    }
+    // Set the fields
+    fields = newFields;
   }
 
   if(3 === len) {
@@ -748,10 +757,11 @@ Collection.prototype.find = function find () {
 
   // If it's a serialized fields field we need to just let it through
   // user be warned it better be good
-  if (options && options.fields && !(options.fields instanceof Buffer)) {
+  if(options && options.fields && !(options.fields instanceof Buffer)) {
     fields = {};
-    if (Array.isArray(options.fields)) {
-      if (!options.fields.length) {
+
+    if(Array.isArray(options.fields)) {
+      if(!options.fields.length) {
         fields['_id'] = 1;
       } else {
         for (var i = 0, l = options.fields.length; i < l; i++) {
